Fix overflow of widgets on mobile and elsewhere
git-svn-id: https://meta.svn.wordpress.org/sites/trunk@567 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-developer/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-developer/style.css
@@ -31,3 +31,8 @@ body #download-mobile a.download-button {
 	font-size:100%;
 }
 
+/* override for text going outside the widgets on mobile */
+.widget-content ul {
+	overflow:auto;
+}
+
